<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarActivity"
    android:background="@color/tres">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/light_grey"
        android:background="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:text="@string/registra" />

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombres"
        android:layout_marginHorizontal="30dp"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/apellidos"
        android:layout_marginHorizontal="30dp"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/telefono"
        android:layout_marginHorizontal="30dp"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/correo"
        android:layout_marginHorizontal="30dp"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginHorizontal="30dp"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnGrabarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dos"
        android:layout_marginHorizontal="30dp"
        android:text="@string/registrar"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:text="@string/volver"
        android:textSize="20dp"/>

</LinearLayout>
