<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccederActivity"
    android:background="@color/tres">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/light_grey"
        android:layout_marginBottom="10dp"
        android:text="@string/login" />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="50dp"
        app:srcCompat="@mipmap/logo"/>

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/telefono" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/password" />

    <Button
        android:id="@+id/LoginbtnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dos"
        android:layout_margin="10dp"
        android:text="@string/ingresar" />

    <Button
        android:id="@+id/LoginbtnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:layout_margin="10dp"
        android:text="@string/volver" />

</LinearLayout>